# drova-telegram-server-info

./: .dockerignore  .env.example  .env.specing.example  .gitignore  AGENTS.md  Dockerfile  README.md  api.py  bot.py  docker-compose.yml  drova-telegram-server-info.service  drova_utils.py  format_utils.py  geo_utils.py  ip_utils.py  products.json  pyproject.toml  requirements.txt  services.py  session_utils.py  startbot.cmd  storage.py  userdata_utils.py  utils.py
.github/workflows/: ci.yml
scripts/: sample_live_api.py
specs/current/: README.md  acceptance-scenarios.md  domain-model.md  drova-api.md  exports.md  storage-and-runtime.md  telegram-ux.md
specs/current/fixtures/: products_full.json  schema-summary.json  server_2_endpoints_limit_5.json  server_2_sessions_limit_5.json  servers.json  sessions_all_limit_5.json  test_station_publish_rollback.json  test_station_publish_toggle_confirm.json
specs/v2/: README.md  architecture.md  domain-model.md  drova-api.md  exports.md  next-iteration.md  product.md  runtime.md  storage.md  telegram-ux.md  tests.md
specs/v2-notes/: backlog.md
src/drova_bot/: __init__.py  app.py  config.py  geoip.py
tests/: __init__.py  conftest.py  test_bot_service.py  test_ci_config.py  test_domain.py  test_drova_client.py  test_exports.py  test_geoip.py  test_handlers.py  test_import_legacy.py  test_live_harness.py  test_renderers.py  test_runtime.py  test_sample_live_api.py  test_storage.py
tests/live/: __init__.py  conftest.py  harness.py  test_live_contract.py
xray-config/: config.json.example-direct  config.json.example-vless
(+72 files in other folders)
