[project]
name = "drova-telegram-server-info"
version = "0.2.0"
description = "Drova Telegram Bot V2"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiogram>=3.22,<4",
    "aiosqlite>=0.21,<0.22",
    "alembic>=1.17,<2",
    "cryptography>=46,<47",
    "httpx>=0.28,<0.29",
    "openpyxl>=3.1,<4",
    "pydantic>=2.12,<3",
    "pydantic-settings>=2.11,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "structlog>=25,<26",
]

[project.scripts]
drova-bot = "drova_bot.app:main"

[dependency-groups]
dev = [
    "mypy>=1.18,<2",
    "pytest>=8.4,<9",
    "pytest-asyncio>=1.2,<2",
    "respx>=0.22,<0.23",
    "ruff>=0.14,<0.15",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/drova_bot"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = ["scripts/sample_live_api.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "RUF"]
ignore = ["RUF001"]

[tool.mypy]
python_version = "3.12"
mypy_path = "src"
packages = ["drova_bot"]
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
warn_unused_ignores = true
show_error_codes = true
